tests are working with new junit jar